<resources>
    <string name="app_name">Categories</string>
    <string name="bgScene">bgScene</string>
    <string name="scribe_e3">scribe_e3</string>
    <string name="scribee3">scribee3</string>
    <string name="scribet3">scribet3</string>
    <string name="writeEnglish">writeEnglish</string>
    <string name="writeThai">writeThai</string>
    <string name="fruitBtn">fruitBtn</string>
    <string name="catBtns">catBtns</string>
    <string name="toFruits">toFruits</string>
    <string name="toFruitt">toFruitt</string>
    <string name="bg_fruitPics">bg_fruitPics</string>
    <string name="bgFruitPics">bgFruitPics</string>
    <string name="appleShot">appleShot</string>
    <string name="stringbluebg">stringbluebg</string>
    <string name="enter_english_here">Enter English here</string>
    <string name="dynamic">dynamic</string>
    <string name="Use_the_letters_below">Use_the_letters_below</string>
    <string name="use_the_english_letters_below">Use the English letters below</string>
    <string name="enter_thai_here">Enter Thai here</string>
    <string name="i_am_here">i_am_here</string>
    <string name="myHint">Use the letters below</string>
    <string name="Unscramble_the_thai_letters_below">Unscramble the Thai letters below</string>
    <string name="reportCard">reportCard</string>
    <string name="disp_thai_word"> dispThaiWord</string>
    <string name="disp_english_word"> disp English Word</string>
    <string name="dispEngletters"> disp Eng letters</string>
    <string name="disp_scram_thai"> dispscramthai</string>
    <string name="dispthaitxt"> dispThaitxt</string>
    <string name="textview">TextView</string>
    <string name="use_these_letters">ใช้ตัวอักษรด้านล่าง</string>
    <string name="ใช้ตัวอักษรด้านล่าง">ใช้ตัวอักษรด้านล่าง</string>
    <string name="ถอดรหัสตัวอักษรด้านล่าง">ถอดรหัสตัวอักษรด้านล่าง</string>
    <string name="sndbtn">sndBtn</string>
    <string name="speakerbtn">speakerbtn</string>
    <string name="สะกดคำ">สะกดคำ</string>
    <string name="การเขียนตามคำบอก">การเขียนตามคำบอก</string>
    <string name="spell">"SสPะEกLดL"</string>
    <string name="back_to_start">backToStart</string>
    <string name="back_to_start_t">backToStart_t</string>
    <string name="two_fruit_e">twofruite</string>
    <string name="thstart">thstart</string>
    <string name="this_is_learning_thai">this_is_learning_thai</string>
    <string name="this_is_learning_eng">this_is_learning_eng</string>
    <string name="one_thousand_nine_hundred_fifty_three">one thousand nine hundred fifty three</string>
    <string name="numbers">numbers</string>
    <string name="engNumbers">engNumbers</string>
    <string name="enter_engnum_here">enter engnum here</string>
    <string name="marksbg">marksbg</string>
    <string name="numPics">numPics</string>
    <string name="thaiNumPics">thaiNumPics</string>
    <string name="thaiNumbers">thaiNumbers</string>
    <string name="displayEngTxt">displayEngTxt</string>
    <string name="displayThaiLetters">displayThaiLetters</string>
    <string name="thaiDigit">thaiDigit</string>
    <string name="english_scram">English Scram</string>
    <string name="thai_scram">Thai Scram</string>
    <string name="userEnter_Eng">user Enter Eng</string>
    <string name="userEnter_Thai">user Enter Thai</string>
    <string name="e_Body">eBody</string>
    <string name="t_Body">tBody</string>
    <string name="t_calendar">t_calendar</string>
    <string name="gold_Back_Ground">gold Back Ground</string>
    <string name="body_View">bodyView</string>
    <string name="thai_goes_here">Thai Goes Here</string>
    <string name="engmonths">engmonths</string>
    <string name="dispThai">dispThai</string>
    <string name="scrambledE">scrambledE</string>
    <string name="seeMonths">seeMonths</string>
    <string name="seeEngMonths">seeEngMonths</string>
    <string name="scrambledT">scrambledT</string>
    <string name="dispEnglish">dispEnglish</string>
    <string name="engDays">engDays</string>
    <string name="bluebg">blueBG</string>
    <string name="unscramble_the_thai_letters_below">Unscramble the Thai letters below</string>
    <string name="hello_world">Hello World</string>
    <string name="thaitime">thaitime</string>
    <string name="thTimeWords">thTimeWords</string>
    <string name="eng_time">engTime</string>
    <string name="eng_time_words">engTimeWords</string>
    <string name="thai_time">thaiTime</string>
    <string name="userInputEng">user_input_eng</string>
    <string name="userInputThai">user_input_thai</string>
    <string name="dispEng">dispEng</string>
    <string name="engTime">engTime</string>
    <string name="spellBtn">spellBtn</string>
    <string name="backToMenu">backToMenu</string>
    <string name="backtomenu">backToMenu</string>
    <string name="infobg3">infobg3</string>
    <string name="bluebackarrow">bluebackarrow</string>
    <string name="myInstruction">myInstruction</string>
    <string name="instructionField">instructionField</string>
    <string name="myinstruction">myInstruction</string>
    <string name="spellBtnEng">spellBtnEng</string>
    <string name="thpointat">thpointat</string>
    <string name="instructionFieldThai">instructionFieldThai</string>
    <string name="toCash">toCash</string>
    <string name="toCashth">toCashth</string>
    <string name="what_do_you_want">What do you want</string>
    <string name="viewcashimage">viewcashimage</string>
    <string name="enterThaiHere">enterThaiHere</string>
    <string name="thweatherbtn">thweatherbtn</string>
    <string name="imagesClimateWords">imagesClimateWords</string>
    <string name="engWeatherStartBtn">engWeatherStartBtn</string>
    <string name="transengStartBtn">transengStartBtn</string>
    <string name="imagesTransportWords">imagesTransportWords</string>
    <string name="imagesVehicleWords">imagesVehicleWords</string>
    <string name="useHintinEng">useHintinEng</string>
    <string name="transthai">transthai</string>
    <string name="displayEnglish">displayEnglish</string>
    <string name="showThaiWord">showThaiWord</string>
    <string name="compassWords">compassWords</string>
    <string name="compassengStartBtn">compassengStartBtn</string>
    <string name="compassThStartBtn">compassThStartBtn</string>
    <string name="compassWordsTh">compassWordsTh</string>
    <string name="postalWordsEng">postalWordsEng"</string>
    <string name="postalWordsTh">postalWordsTh</string>
    <string name="engmailstart">engmailstart</string>
    <string name="startThaiMail">startThaiMail</string>
    <string name="thaiWords">thaiWords</string>
    <string name="toCashth2">toCashth2</string>
    <string name="familyMemberEng">familyMemberEng</string>
    <string name="familyMemberTh">familyMemberTh</string>
    <string name="toCash2">toCash2</string>
    <string name="localsEng">localsEng</string>
    <string name="venue">venue</string>
    <string name="venueBtn">venueBtn</string>
    <string name="venueBtn2">venueBtn2</string>
    <string name="venueBtn2btn">venueBtn2btn</string>
    <string name="localsTh">localsTh</string>
    <string name="careerPic">careerPic</string>
    <string name="proThai">proThai</string>
    <string name="proThaibtn">proThaibtn</string>
    <string name="startEwork">startEwork</string>
    <string name="startEworkBtn">startEworkBtn</string>
    <string name="eCareerPic">eCareerPic</string>
    <string name="eVerbStart">eVerbStart</string>
    <string name="tVerbStart">tVerbStart</string>
    <string name="eAdjImage">eAdjImage</string>
    <string name="adjImageHolder">adjImageHolder</string>
    <string name="extraEngVerbPicHolder">extraEngVerbPicHolder</string>
    <string name="thVerbExtraPic">thVerbExtraPic</string>
    <string name="containCritterPics">containCritterPics</string>
    <string name="containThCritterPics">containThCritterPics</string>
    <string name="pronounPicHolder">pronounPicHolder</string>
    <string name="englishpronoun">englishpronoun</string>
    <string name="thPronounPicHolder">thPronounPicHolder</string>
    <string name="clothPics">clothPics</string>
    <string name="thaiClothHolder">thaiClothHolder</string>
    <string name="ecolourBTN">ecolourBTN</string>
    <string name="hasColorPics">hasColorPics</string>
    <string name="thcolourBTN">thcolourBTN</string>
    <string name="EutilityBTN">EutilityBTN</string>
    <string name="allUtilityPics">allUtilityPics</string>
    <string name="thUtilityBTN">thUtilityBTN</string>
    <string name="engMedBtn">engMedBtn</string>
    <string name="allMedicalPics">allMedicalPics</string>
    <string name="thaiMedBtn">thaiMedBtn</string>
    <string name="thaiMedicalPics">thaiMedicalPics</string>
    <string name="engNounsBtn">engNounsBtn</string>
    <string name="thNounsBtn">thNounsBtn</string>
    <string name="nounAdjKeeper">nounAdjKeeper</string>
    <string name="thaiAdjKeeper">thaiAdjKeeper</string>
    <string name="engAmbleiconBtn">engAmbleiconBtn</string>
    <string name="thAmbleiconBtn">thAmbleiconBtn</string>
    <string name="engPathKeeper">engPathKeeper</string>
    <string name="thPathKeeper">thPathKeeper</string>
    <string name="engnationsBtn">engnationsBtn</string>
    <string name="thailandBtn">thailandBtn</string>
    <string name="engcountrykeeper">engcountrykeeper</string>
    <string name="thcountryKeeper">thcountryKeeper</string>
    <string name="holdStoresBTN">holdStoresBTN</string>
    <string name="engRetailerView">engRetailerView</string>
    <string name="thHoldStoresBTN">thHoldStoresBTN</string>
    <string name="thRetailerView">thRetailerView</string>
    <string name="engHoldToolsBTN">thHoldStoresBTN</string>
    <string name="engToolView">thRetailerView</string>
    <string name="thHoldToolBTN">thHoldStoresBTN</string>
    <string name="thToolsView">thRetailerView</string>
    <string name="thHoldToolBtn">thHoldStoresBtn</string>
    <string name="engHoldBathBTN">engHoldBathBTN</string>
    <string name="engJohnView">engJohnView</string>
    <string name="thHoldToiletBtn">thHoldToiletBtn</string>
    <string name="thBathroomView">thBathroomView</string>
    <string name="engHoldKitchenBTN">engHoldKitchenBTN</string>
    <string name="engCookHouseView">engCookHouseView</string>
    <string name="thHoldKitchenBtn">thHoldKitchenBtn</string>
    <string name="thCookHouseView">thCookHouseView</string>
    <string name="engHoldBedroomBTN">engHoldBedroomBTN</string>
    <string name="engSleepPicsView">engSleepPicsView</string>
    <string name="thHoldBedroomBtn">thHoldBedroomBtn</string>
    <string name="thSleepPics">thCookHouseView</string>
    <string name="engHoldHouseBTN">engHoldHouseBTN</string>
    <string name="engHomePicsView">engHomePicsView</string>
    <string name="thHoldHouseBtn">thHoldHouseBtn</string>
    <string name="thHomePics">thHomePics </string>
    <string name="engHoldVeggieBTN">engHoldVeggieBTN</string>
    <string name="engVegPicsView">engVegPicsView</string>
    <string name="thHoldVeggieBtn">thHoldVeggieBtn</string>
    <string name="thVegPics">thVegPics </string>
    <string name="engHoldshoppingBTN">engHoldshoppingBTN</string>
    <string name="engshoppingPicsView">engshoppingPicsView</string>
    <string name="thHoldshoppingBtn">thHoldshoppingBtn</string>
    <string name="thshoppingPics">thshoppingPics</string>
    <string name="engHoldPluralsBTN">engHoldpluralsBTN</string>
    <string name="engPluralsPicsView">engpluralsPicsView</string>
    <string name="thHoldPluralsBtn">thHoldpluralsBtn</string>
    <string name="thPluralsPics">thVegPics </string>
    <string name="engHoldWordBTN">engHoldWordBTN</string>
    <string name="engWordPicsView">engWordPicsView</string>
    <string name="thHoldWordBtn">thHoldWordBtn</string>
    <string name="thWordPics">thWordPics</string>
    <string name="EngVocabNamesBTN">EngVocabNamesBTN</string>
    <string name="engWVocabPics">engWVocabPics</string>
    <string name="ThVocabNamesBTN">ThVocabNamesBTN </string>
</resources>